# safepkt-server

./: .env.dist  .env.test  .eslintrc.js  Cargo.toml  Makefile  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build-push-docker-image.yml  ci.yml  continuous-integration.yml  release.yml  unit-tests.yml
.github/workflows/build-container/: archive-rvt-simd_emulation-runtime.sh
.github/workflows/release/: build-linux-binary.sh  (+1 more)
app/: router.scrollBehavior.js
components/app-header/: app-header.scss  app-header.vue
components/editor/: editor.scss  editor.vue
components/history/: history.scss  history.vue
components/logo/: logo.scss  logo.vue
components/report/: report.scss  report.vue
components/symbolic-execution-flags/: symbolic-execution-flags.scss  symbolic-execution-flags.vue
components/verification-steps/: verification-steps.scss  verification-steps.vue
config/: index.ts
docs/: index.md
examples/: buggy-erc20.rs  erc721.rs
mixins/: meta.ts  project.ts  verification-runtime.ts  verification-steps.ts
mixins/step/: llvm-bitcode-generation.ts  program-verification.ts  source-restoration.ts  symbolic-execution.ts  upload-source.ts
modules/: events.ts  json.ts  report.ts  shared-state.ts  verification-steps.ts
pages/: index.scss  index.vue
plugins/: vuex-persist.ts
provisioning/: install.sh
provisioning/production/: install.sh  playbook.sh
provisioning/web-server/: docker-compose.override.yml  docker-compose.override.yml.dist  docker-compose.yml  install.sh  playbook.sh
src/: cli.rs  domain.rs  http.rs  infrastructure.rs  lib.rs  main.rs
src/application/: command.rs  project.rs
src/domain/: verification.rs
src/infrastructure/: docker.rs  service.rs  signal.rs  verification.rs
store/: contract.ts  editor.ts  report.ts  verification-runtime.ts  verification-steps.ts
store/step/: llvm-bitcode-generation.ts  program-verification.ts  source-restoration.ts  symbolic-execution.ts  upload-source.ts
store/tests/: report.spec.ts
styles/: global.scss  variables.scss
types/: project.d.ts  verification-steps.d.ts
utils/: store-accessor.ts
(+59 files in other folders)
