[package]
name = "safepkt-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13.0"
chrono = "0.4"
color-eyre = "0.5.11"
dotenv = "0.15.0"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
serde = { version ="1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19", features = ["json", "fmt"] }
