[package]
name = "safepkt-backend"
version = "0.2.1"
authors = ["Caleb James Delisle <cjd@cjdns.fr>", "Thierry Marianne <thierry.marianne@pm.me>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
A backend to run static analysis tools against rust-based programs.
"""

[[bin]]
name="safepkt-backend"
path= "src/http.rs"

[[bin]]
name="safepkt-cli"
path= "src/cli.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
base64 = "0.13.0"
bollard = "0.11"
clap = "2.33.3"
color-eyre = "0.5.11"
dotenv = "0.15.0"
fungus = "0.1.27"
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
nix = { version = "0.23.0" }
routerify = "2"
routerify-cors = "2"
serde = { version ="1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.2.19", features = ["json", "fmt"] }

[dependencies.async-std]
version = "1.6.0"
features = ["attributes"]

[dev-dependencies]
rand = "0.8.4"
rand_core = "0.6.3"
